Order/Alignment issues in the List

--- a/app/assets/stylesheets/mobile-list.css.scss
+++ b/app/assets/stylesheets/mobile-list.css.scss
@@ -340,12 +340,37 @@
 
 						  .prod-when-own {
 
+						  	@include flexbox();
+						  	@include flex-flow(nowrap column);
+
+						  	.price {
+						  		@include order(1);
+						  	}
+						  	.when {
+						  		@include order(4);
+						  	}
+						  	.own {
+						  		&:nth-of-type(3) {
+						  			@include order(2);
+						  		}
+						  		&:last-of-type {
+						  			@include order(3);
+						  		}
+						  	}
+
 							.price {
 							  width: 105%;
 
 							  input.list-item-price {
 								width: 99%;
 							  }
+							}
+
+							.own {
+								> span {
+									display: inline-block;
+									width: 2rem;
+								}
 							}
 
 							.when,
@@ -355,7 +380,7 @@
 							  margin-bottom: 5px;
 
 							  .choicedrop {
-								width: 30%;
+								width: 3.6rem;
 								margin-left: 5px;
 								line-height: 1.2em;
 								border-radius: 4px;
